<resources>
    <string name="app_name">AeD</string>
    <string name="action_search">Cerca</string>
    <string name="button_Imposta">Imposta</string>
    <string name="button_OK">OK</string>
    <string name="button_Cancel">Torna</string>
    <string name="saro_disponibile">Disponibilità:</string>
    <string name="messaggio_opz">Messaggio (opzionale):</string>
    <string name="per_le_prox">per la prossima ora.</string>
    <string name="mio_numero">Il mio numero di telefono è:</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_refresh">Aggiorna</string>
    <string name="title_activity_set_availability">Imposta la tua disponibilità</string>
    <string name="rad_altelefono">Al telefono</string>
    <string name="rad_whatsapp">SMS e WhatsApp</string>
    <string name="rad_nonsonodisponibile">Non sono disponibile</string>
    <string-array name="availability_mode">
        <item>Al telefono</item>
        <item>SMS e WhatsApp</item>
        <item>Non sono disponibile</item>
    </string-array>
    <string-array name="availability_hours">
        <item>1 ora</item>
        <item>2 ore</item>
        <item>3 ore</item>
        <item>4 ore</item>
    </string-array>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="tu_sei">Io sono:</string>
    <string-array name="tu_sei_array">
        <item>Dana</item>
        <item>Alessio</item>
    </string-array>
</resources>
